--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
@@ -85,13 +85,15 @@
                     <td>{{ show.title }}</td>
                     <td>{{ show.network }}</td>
                     <td>{{ show.release_date }}</td>
-                    <td> <a href="/shows/{{book.id}}">Show</a> </td>
+                    <td> <a href="/shows/{{show.id}}">Show</a> </td>
                   </tr>
                   {% endfor %}
                 </tbody>
             </table>
         </div>
       </div>
+
+      <td> <a href="/new">Add a new show</a> </td>
 
     </main>
   </body>
