--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
@@ -85,7 +85,11 @@
                     <td>{{ show.title }}</td>
                     <td>{{ show.network }}</td>
                     <td>{{ show.release_date }}</td>
-                    <td> <a href="/shows/{{show.id}}">Show</a> </td>
+                    <td>
+                      <a href="/shows/{{show.id}}">Show</a>
+                      <a href="/">TODO: Edit</a>
+                      <a href="/">TODO: Delete</a>
+                    </td>
                   </tr>
                   {% endfor %}
                 </tbody>
