--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/new.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/new.html
@@ -1,22 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Show</title>
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    {% load static %}		<!-- added this line -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
     <style type="text/css">
     </style>
   </head>
-  
   <!-- ===================================================================== -->
   <body>
-    <a href="/">Home</a>
-
-    <h2>ID: {{show.id}}</h2> <br>
-    <h2>Title: {{show.title}}</h2> <br>
-    <h3>Description: {{show.description}}</h3>
+    <h1>hello</h1>
   </body>
 </html>
