--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
@@ -97,7 +97,7 @@
         </div>
       </div>
 
-      <td> <a href="/new">Add a new show</a> </td>
+      <td> <a href="/shows/new">Add a new show</a> </td>
 
     </main>
   </body>
