--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/new.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/new.html
@@ -11,6 +11,24 @@
   </head>
   <!-- ===================================================================== -->
   <body>
-    <h1>hello</h1>
+    <a href="/shows">Home</a>
+    <!-- ------------------------------------------------------------------- -->
+    <form action='/shows/new/add' method='POST'>
+      {% csrf_token %}
+      <div class="form-group"> <!-- fill-in-blank for name -->
+        <label for="title">Name: </label>
+        <input type="text" id="title" name="title" class="form-control">
+      </div>
+
+      <div class="form-group"> <!-- fill-in-blank for email -->
+        <label for="TODO">Email: </label>
+        <input type="text" id="TODO" name="TODO" class="form-control">
+      </div>
+
+      <input type="hidden" id="submit-button" name="building" value="house">
+      <button class="btn btn-primary" id="refresh-page">Submit</button>
+
+    </form>
+    <!-- ------------------------------------------------------------------- -->
   </body>
 </html>
