deleting row from show.html

--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/show.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/show.html
@@ -18,5 +18,12 @@
     <h2>ID: {{show.id}}</h2> <br>
     <h2>Title: {{show.title}}</h2> <br>
     <h3>Description: {{show.description}}</h3>
+
+  <!-- TODO -->
+   <a href="/shows/{{show.id}}/edit">Edit</a>
+
+
+   <a href="/shows/{{show.id}}/delete">Delete</a>
+
   </body>
 </html>
