--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
@@ -87,8 +87,10 @@
                     <td>{{ show.release_date }}</td>
                     <td>
                       <a href="/shows/{{show.id}}">Show</a>
+                      <br>
                       <a href="/">TODO: Edit</a>
-                      <a href="/">TODO: Delete</a>
+                      <br>
+                      <a href="/shows/{{show.id}}/delete">Delete</a>
                     </td>
                   </tr>
                   {% endfor %}
