--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/show.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/show.html
@@ -15,12 +15,12 @@
   <body>
     <a href="/">Home</a>
 
-    <h2>ID: {{show.id}}</h2> <br>
-    <h2>Title: {{show.title}}</h2> <br>
-    <h3>Description: {{show.description}}</h3>
+    <h2>ID: {{trip.id}}</h2> <br>
+    <h2>Title: {{trip.title}}</h2> <br>
+    <h3>Description: {{trip.description}}</h3>
 
-    <a href="/shows/{{show.id}}/edit">Edit</a>
-    <a href="/shows/{{show.id}}/delete">Delete</a>
+    <a href="/trips/{{trip.id}}/edit">Edit</a>
+    <a href="/trips/{{trip.id}}/delete">Delete</a>
 
   </body>
 </html>
