--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
@@ -80,18 +80,18 @@
               </tr>
               </thead>
               <tbody>
-                {% for show in shows %}
+                {% for trip in trips %}
                 <tr>
-                  <td>{{ show.id }}</td>
-                    <td>{{ show.title }}</td>
-                    <td>{{ show.network }}</td>
-                    <td>{{ show.release_date }}</td>
+                  <td>{{ trip.id }}</td>
+                    <td>{{ trip.title }}</td>
+                    <td>{{ trip.network }}</td>
+                    <td>{{ trip.release_date }}</td>
                     <td>
-                      <a href="/shows/{{show.id}}">Show</a>
+                      <a href="/trips/{{trip.id}}">Show</a>
                       <br>
-                      <a href="/shows/{{show.id}}/edit">Edit</a>
+                      <a href="/trips/{{trip.id}}/edit">Edit</a>
                       <br>
-                      <a href="/shows/{{show.id}}/delete">Delete</a>
+                      <a href="/trips/{{trip.id}}/delete">Delete</a>
                     </td>
                   </tr>
                   {% endfor %}
@@ -100,7 +100,7 @@
         </div>
       </div>
 
-      <td> <a href="/shows/new">Add a new show</a> </td>
+      <td> <a href="/trips/new">Add a new trip</a> </td>
 
     </main>
   </body>
