--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/new.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/new.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Show</title>
+    <title>New</title>
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -11,9 +11,9 @@
   </head>
   <!-- ===================================================================== -->
   <body>
-    <a href="/shows">Home</a>
+    <a href="/trips">Home</a>
     <!-- ------------------------------------------------------------------- -->
-    <form action='/shows/new/add' method='POST'>
+    <form action='/trips/new/add' method='POST'>
       {% csrf_token %}
       <div class="form-group"> <!-- fill-in-blank for name -->
         <label for="title">Name: </label>
