--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/show.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/show.html
@@ -16,7 +16,7 @@
     <a href="/">Home</a>
 
     <h2>ID: {{trip.id}}</h2> <br>
-    <h2>Title: {{trip.title}}</h2> <br>
+    <h2>Dest: {{trip.dest}}</h2> <br>
     <h3>Description: {{trip.description}}</h3>
 
     <a href="/trips/{{trip.id}}/edit">Edit</a>
