--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/edit.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/edit.html
@@ -18,8 +18,8 @@
     <form action='/trips/{{trip.id}}/edit/apply_edit' method='POST'>
       {% csrf_token %}
       <div class="form-group"> <!-- fill-in-blank for name -->
-        <label for="title">Name: </label>
-        <input type="text" id="title" name="title" class="form-control">
+        <label for="dest">Name: </label>
+        <input type="text" id="dest" name="dest" class="form-control">
       </div>
 
       <!-- TODO: Other row fields -->
