--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
@@ -64,7 +64,19 @@
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   </head>
   <body>
-    <!-- ------------------------------------------------------------------- -->
+        <!-- ------------------------------------------------------------------------------------------------------- -->
+        <nav>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Welcome {{request.session.user_logged_in.first_name}}</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/logout">Logout</a>
+                </li>
+          </ul>
+        </nav>
+        <!-- ------------------------------------------------------------------------------------------------------- -->
     <main>
       <!-- --------------------------------------------------------------- -->
       <div class="album py-5 bg-light">
