almost done with new page

--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
@@ -45,7 +45,7 @@
         <nav>
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Welcome {{request.session.user_logged_in.first_name}}</a>
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Hello {{request.session.user_logged_in.first_name}}!</a>
                 </li>
 
                 <li class="nav-item">
