--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/reg_login.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/reg_login.html
@@ -89,7 +89,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="/trips">Home</a>
+            <a class="nav-link" href="/trips">Dashboard</a>
         </li>
 
         <li class="nav-item">
