validation on adding trip

--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
@@ -77,7 +77,7 @@
               </thead>
               <tbody>
                   <!--Only list trips added by the current user -->
-                    {% for trip in user.trips.all %}
+                    {% for trip in user.trips.all reversed %}
                     <tr>
                         <td><a href="/trips/{{trip.id}}">{{ trip.dest }}</a></td>
                         <td>{{ trip.start_date }}</td>
