--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/index.html
@@ -87,7 +87,7 @@
                         <td>{{request.session.user_logged_in.first_name}}</td>
                         <td> <!--Actions-->
                           <p>
-                          <a href="/trips/{{trip.id}}/edit">Edit</a>
+                          <a href="/trips/edit/{{trip.id}}">Edit</a>
                            |
                           <a href="/trips/{{trip.id}}/delete">Delete</a>
                           </p>
