--- a/tv_shows/apps/tv_shows_app/templates/tv_shows_app/show.html
+++ b/tv_shows/apps/tv_shows_app/templates/tv_shows_app/show.html
@@ -50,7 +50,7 @@
             <ul class="nav nav-pills">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/trips/{{trip.id}}/edit">Edit</a>
+                    <a class="nav-link" href="/trips/edit/{{trip.id}}">Edit</a>
                 </li>
 
                 <li class="nav-item">
